# ww-subscribe

./: .dockerignore  .env  Cargo.toml  Dockerfile  docker-compose.yaml
migrations/2018-10-26-173235_novels/: down.sql  up.sql
migrations/2018-10-27-195859_subscriptions/: up.sql
migrations/2019-04-24-065241_create_novel_history/: down.sql  up.sql
migrations/2019-04-24-074602_remove_last_link_from_novels/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
