[package]
name = "ww_subscription"
version = "0.1.0"
authors = ["Gustavo Aguiar <gugahoa@gmail.com>"]
edition = "2018"

[lib]

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
rss = { version = "1.6.0", features = ["from_url"] }
telebot = "0.2.10"
tokio-core = "0.1.15"
futures = "0.1.18"
tokio = "0.1.11"
rayon = "1.0"
